# ChangeLog for dev-python/south
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/south/ChangeLog,v 1.12 2013/08/14 11:22:53 patrick Exp $

  14 Aug 2013; Patrick Lauer <patrick@gentoo.org> south-0.7.6.ebuild:
  Whitespace

  03 Jun 2013; Tiziano Müller <dev-zero@gentoo.org> south-0.8.1.ebuild:
  Fix whitespace minorsyn.

*south-0.8.1 (03 Jun 2013)

  03 Jun 2013; Tiziano Müller <dev-zero@gentoo.org> +south-0.8.1.ebuild:
  Version bump (bug #471824), fix tests to run for all python versions. Note:
  python 3.x support is still alpha and tests fail.

*south-0.7.5-r1 (18 May 2013)
*south-0.7.6 (18 May 2013)

  18 May 2013; Ian Delaney <idella4@gentoo.org> +files/south-0.7.5-tests.patch,
  +south-0.7.5-r1.ebuild, +south-0.7.6.ebuild:
  0.7.5-r1, migrate -> distutils-r1, patch addressing test phase, bump; test
  phases fixed, invoked

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> south-0.7.5.ebuild:
  Stable for x86, wrt bug #364053

  07 Dec 2012; <ago@gentoo.org> south-0.7.5.ebuild:
  Stable for amd64, wrt bug #364053

  13 Jul 2012; Tiziano Müller <dev-zero@gentoo.org> south-0.7.5.ebuild:
  one step closer to working tests but there's still something wrong

*south-0.7.5 (28 May 2012)

  28 May 2012; Tiziano Müller <dev-zero@gentoo.org> +south-0.7.5.ebuild:
  Version bump (bug #417713, thanks to Ian Delaney).

*south-0.7.4 (19 Apr 2012)

  19 Apr 2012; Patrick Lauer <patrick@gentoo.org> +south-0.7.4.ebuild:
  Bump

  13 Feb 2011; Petteri Räty <betelgeuse@gentoo.org> south-0.7.2.ebuild,
  south-0.7.3.ebuild:
  Keyword for ~x86.

*south-0.7.3 (31 Jan 2011)

  31 Jan 2011; Dirkjan Ochtman <djc@gentoo.org> +south-0.7.3.ebuild:
  Version bump to 0.7.3 (bug 347581).

*south-0.7.2 (27 Aug 2010)

  27 Aug 2010; Tiziano Müller <dev-zero@gentoo.org> +south-0.7.2.ebuild,
  +metadata.xml:
  Initial commit (bug #262923).