@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX south-0.7.5-tests.patch 705 SHA256 a9dd6876f54d40236d824e7a3ffc540af57d9883b8c7268390e49b3a8df9a6dd SHA512 22cbbb6a73aa2ac61a43ad3848de19a6103b016994a7ccf353e4a52068ba861b040b4e37e24793dc60332601c792117b8e20746c352ce0d452ca0b8b6a028aee WHIRLPOOL 4ddf6ddef6b269ad0902a3def0b6863aeaa70dd8db15c53ec91e630aea59bcac3455f3758d492a622cc79b1eebaeb256083604c0874969352400822ab7f08cf6
 DIST south-0.7.2.tar.gz 110527 SHA256 003fdcc1af01fda473d0f92f7f5afc25a75756a2a04acfb76c9a1d41a5db4211 SHA512 aeb53706dbec36b7bf00e10c582d059cee5966cf882ab439b52a008a8ab9b5d064e18a4d498a2a1fee4d2dbe973964296110f647663006c7e4f950d95bc71813 WHIRLPOOL 491d7a39042fef55bf175803018b89b909783b616b0a4990c0415dd276fe08f528a81e42616566d4340865e92eb6860631b903a94ff03f19649b67ad6e92ac51
 DIST south-0.7.3.tar.gz 112673 SHA256 ab1c72cd013fab2ddbef3100f2bf7a7f3d9fbc7169cd3e6c181060c17fdeea97 SHA512 09b8cd649523e42b4f469083fb563855c4382f68413571cad746c82b1e777c3725e595884eef339f73bde9c2ab8e137769df84ad9a912243e8cb2fcfed9a96c2 WHIRLPOOL 0839fe0bc37d508363959c70062cb3b3b3039207877265c9b1f0897470ab4f8f6f2406fe11730a21b434b9cdf84a9f7408d8a952d13cd65cfe37922c0ac24c56
@@ -11,6 +14,26 @@ EBUILD south-0.7.4.ebuild 1196 SHA256 e121acfbefabad525dc533a358603d48265b320640
 EBUILD south-0.7.5-r1.ebuild 1860 SHA256 91dcb36f1161a25109c6bc422b40ad9d3b0a21822a8d85fa032c7f09b93722b2 SHA512 e6de73fe36af308ff143c22351844cd07eaa0bdcbeb6fff05986645b1d658569fbb023544e90edb672303a07718dbf10813ef1a986813e4732c00246d71542bf WHIRLPOOL 892d65db7457e001d1edeb0907070bc00bb2cd34426dc0f3f195f576212c3ab6049731213313291fb45fac02a9b611db17af1f1ca3d0c13196d04b146cb32df9
 EBUILD south-0.7.5.ebuild 1815 SHA256 e0452e3041f0ec878c11b8186d5726b03a1068be7dae4d0aac2a223fac1be177 SHA512 9adb139420fd6f30db597c2d19dafc9d5a88a17cff17d9af98a0d5befb0bc10b0f25d494bcc53e1a9bc68e7a374a326c8fb130c02b678daeecd6fa6339caf4b9 WHIRLPOOL a14a619907455f42c468230d7e874620fdf3e20655499b03284c3e6d82cbee099f2054b7b55d4b26abf11339439c0c800fe698152e7e9c1c2ae744d83be905ce
 EBUILD south-0.7.6.ebuild 1662 SHA256 cb1026d51879b80b7d19c78070f12e123eb94996a7cca8ac9ed6ad77925d477c SHA512 124d15bc0e556ba6536d64fc62e20bc42ca8949906e377235e8b631d1d144a830d03b16db91d1b410970ec780b4e5f73313ae30a74fa34174c4c08712028bccb WHIRLPOOL f8818ba3dd8207b83a0891332b413c57522fe1a32883fcc44953289a69f63800ce339cd8ffb3e1b5a792604dc8cc15a92646d0d0c754d4ceb15c0de170353666
+EBUILD south-0.8.1-r1.ebuild 1703 SHA256 83aafed04eb9069d5905648ddef72703fa4235da8d314f07b88285f832f18398 SHA512 a452f2a9e619272ac5afd31b1aa17a724de915844fdc2c4bc18d60f404a47f5839c55cbee56c25c8bc6db2f6b69699646e2349ea50c2c239313c816a3b5347a7 WHIRLPOOL 81c814524697699e47021630904afd8a992aa851a3040cdf02d43c529368b4b823957192e62559f463287bb785a36dffe33a700e81e37a8621bbdb79929aaa0b
 EBUILD south-0.8.1.ebuild 1749 SHA256 70252e6577c8f57626758c394baa6db3b0ff61a9107c760a915b2bb49d30fd7b SHA512 e8926f736e3e33d9e01fb919c0ceca7ea8e5359a3c013c7f7c8069247e5e2398396695ed9a22b9a5bbc32c385d4062e4dc6a323c3b7a5e9d0c3ac9281766486f WHIRLPOOL 1a9aab1a10f5331b7a1b5a7775a5eff3503cf238c3b3454cd44910deee91ec9e47f64dda0e7c59e3e557f09d2c5dbdd130a8aedec34e9720b2867bc02eb20f4a
-MISC ChangeLog 1914 SHA256 084c8fd900db9d808c4b4545d0bca46571668a8aa965ad9428a4e336c7c7880f SHA512 8db34f1eb936d74e5c774bdb8cca01973fa7fe35e8b7da6370a4ce8e83552b31c9d7e07e9d6f95f65a4f1c5f4244fcecf6368c91d0943e5a287f5caa7364e436 WHIRLPOOL bcf027e6f494629dc445e94e115527115bdc19d2dd79fe86f0d520af766aea4108d50b970033e68e2b08c8985cc7f84cc24d227f05203bead5ba6063cd1a06e4
-MISC metadata.xml 236 SHA256 8db85d348f1fcca741457358302188e30b7b1c0524a9a55820b935d8bcac959e SHA512 8086fc7bc2140d0b7b96293ba80717a8dcb88b255cc3906b5ac1ec4b9c67a412d3a51ad03a19e3b700a0235d0622b525ef85289f616646d47c698b3b54157b7e WHIRLPOOL 080a90e854f29d29d005f164fba91fc9e05f362460cd8f825ecb7f16d893a1cce1f7e842bf561918a491d156c48c1d8e4a60b177ab28667c067ee379d626de68
+MISC ChangeLog 2155 SHA256 e910a38255f9fc9b21bf68783e3524e184237f6355e41998172544f916f4baf2 SHA512 672591e37866bd31476cd91bbe728f732c6a842fc5defa5077488506914b21f9b7855de9ad6e1788d0889dfe1d3f187b61808130073a7f0a9005f65ac806aa00 WHIRLPOOL 88df302dc320152651bca7071e66140ea54b8d4baeb89e2af3a0890237046ab14494473aa83fbf5b8d32e4289b02856671085c25b9bc2827cdfe8efce0f3025c
+MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQJ8BAEBCABmBQJTIchCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOy8QP/3720d37uhsR0r0S5QNSO/oO
+VCFlAamN/P7ZSZZ3Bak1FvqagFsWHvlQpkdhuDSzOV/kVpTVm6t8t/4SIiWCbruZ
+snaoKQdxOp0VEO0wsK+D3I7A+LHqH8l2GnKShds1luqbcVovEY0nDns27L198+1F
+W3Ick+6MXGTFjtFwL9Nqjvk6cOLOltVx95XQJjBIaoFUz8Rx+7wy79PWptsRP6nn
+bcGQ/aajBl/JvPIOjmA1ShpXDxvbbDVQFt/KvzvZQNvHvZ8ol/VgitXGI0Py6a2+
+UxTxoMi5F6JR1LaJNO6Ltste6rT+f0rb+OVczrnXSfwpC+gMq270GEVSCnltoZ2A
+XcKpdR3mb6qZ7Y8IdrnOv0MbcyvmCbsMopaZs/EdakQCbFZgOOcJ8uI96tFuV756
+Icn9AIC8rEnkYMK0RyJUt8mGz/hnKWROJqH7KmJhC4OhXDcoJcArNxpJJOezoJ4n
+rIE7D8nZeAa0Rb5b6ekclRXui0YkZ24R4LyMMh5dfFF9YaHMhsRw1pCZ6iLQkivJ
+mhgAUda/Kkrt7kNJWk7zUgTiuiufWGRbQv7+wwHLq2oaLH3qffWeE7KJ8W2jzohj
+xiI6jiOBt+SKSeq7IsVSf83HKTReYkcBAZ+a4J0ovY1JAsmTTDrzBMmgvmOEhXud
+kYeo96eStTjiaP/IWLcb
+=SYu2
+-----END PGP SIGNATURE-----
