@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/south
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/south/ChangeLog,v 1.12 2013/08/14 11:22:53 patrick Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/south/ChangeLog,v 1.13 2014/03/13 15:01:21 mgorny Exp $
+
+*south-0.8.1-r1 (13 Mar 2014)
+
+  13 Mar 2014; Michał Górny <mgorny@gentoo.org> +south-0.8.1-r1.ebuild,
+  metadata.xml:
+  Clean up and fix the ebuild wrt bug #484418. Switch the maintainership to
+  python@ on previous maintainer's request.
 
   14 Aug 2013; Patrick Lauer <patrick@gentoo.org> south-0.7.6.ebuild:
   Whitespace
